--- a/arch/arm/boot/dts/qcom/msm-pmi8950.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pmi8950.dtsi
@@ -1,4 +1,5 @@
 /* Copyright (c) 2015-2017, The Linux Foundation. All rights reserved.
+ * Copyright (C) 2019 XiaoMi, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -585,7 +586,7 @@
 						"torch0_trigger";
 				qcom,max-current = <200>;
 				qcom,id = <0>;
-				qcom,current = <100>;
+				qcom,current = <120>;
 			};
 
 			pmi8950_torch1: qcom,torch_1 {
@@ -595,16 +596,7 @@
 						"torch1_trigger";
 				qcom,max-current = <200>;
 				qcom,id = <1>;
-				qcom,current = <100>;
-			};
-			pmi8950_torch2: qcom,torch_2 {
-				label = "torch";
-				qcom,led-name = "flashlight";
-				qcom,default-led-trigger =
-						"torch2_trigger";
-				qcom,max-current = <200>;
-				qcom,id = <1>;
-				qcom,current = <100>;
+				qcom,current = <120>;
 			};
 
 			pmi8950_switch: qcom,switch {
@@ -634,10 +626,11 @@
 			qcom,wave-play-rate-us = <5263>;
 			qcom,actuator-type = "erm";
 			qcom,wave-shape = "square";
-			qcom,vmax-mv = <2700>;
+			qcom,vmax-mv = <2000>;
 			qcom,ilim-ma = <800>;
 			qcom,sc-deb-cycles = <8>;
 			qcom,int-pwm-freq-khz = <505>;
+			qcom,en-brake;
 			qcom,brake-pattern = [03 03 00 00];
 			qcom,use-play-irq;
 			qcom,use-sc-irq;
