--- a/arch/arm/boot/dts/qcom/msm8953.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8953.dtsi
@@ -1,5 +1,6 @@
 /*
  * Copyright (c) 2015-2018, The Linux Foundation. All rights reserved.
+ * Copyright (C) 2019 XiaoMi, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -101,8 +102,8 @@
 		};
 
 		dfps_data_mem: dfps_data_mem@90000000 {
-			reg = <0 0x90000000 0 0x1000>;
-			label = "dfps_data_mem";
+		       reg = <0 0x90000000 0 0x1000>;
+		       label = "dfps_data_mem";
 		};
 
 		cont_splash_mem: splash_region@0x90001000 {
@@ -803,7 +804,7 @@
 		dmas = <&dma_blsp1 8 64 0x20000020 0x20>,
 			<&dma_blsp1 9 32 0x20000020 0x20>;
 		dma-names = "tx", "rx";
-		status = "okay";
+		status = "disabled";
 	};
 
 	i2c_5: i2c@7af5000 { /* BLSP2 QUP1 */
