--- a/arch/arm/boot/dts/qcom/msm8953-camera-sensor-qrd_rosy.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8953-camera-sensor-qrd_rosy.dtsi
@@ -1,5 +1,6 @@
 /*
- * Copyright (c) 2015-2016, The Linux Foundation. All rights reserved.
+ * Copyright (c) 2015-2017, The Linux Foundation. All rights reserved.
+ * Copyright (C) 2019 XiaoMi, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -58,11 +59,14 @@
 		qcom,mem0 = <0x18F6 0x0 2 0 1 0>;
 
 		cam_vio-supply = <&pm8953_l6>;
+		cam_vdig-supply = <&pm8953_l2>;
 		cam_vaf-supply = <&pm8953_l17>;
-		qcom,cam-vreg-name = "cam_vio", "cam_vaf";
-		qcom,cam-vreg-min-voltage = <1800000 2850000>;
-		qcom,cam-vreg-max-voltage = <1800000 2850000>;
-		qcom,cam-vreg-op-mode = <100000 100000>;
+		cam_vana-supply = <&pm8953_l22>;
+		qcom,cam-vreg-name = "cam_vio", "cam_vdig", "cam_vaf",
+						"cam_vana";
+		qcom,cam-vreg-min-voltage = <0 1200000 2850000 2900000>;
+		qcom,cam-vreg-max-voltage = <0 1200000 2850000 2900000>;
+		qcom,cam-vreg-op-mode = <0 105000 100000 80000>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk0_default
 						&cam_sensor_rear_default>;
@@ -74,10 +78,22 @@
 		qcom,gpio-req-tbl-flags = <1 0>;
 		qcom,gpio-req-tbl-label = "CAMIF_MCLK0",
 			"CAM_RESET0";
-		qcom,cam-power-seq-type = "sensor_vreg", "sensor_vreg";
-		qcom,cam-power-seq-val = "cam_vio", "cam_vaf";
-		qcom,cam-power-seq-cfg-val = <1 1>;
-		qcom,cam-power-seq-delay = <5 5>;
+		qcom,cam-power-seq-type = "sensor_gpio",
+						"sensor_vreg",
+						"sensor_vreg",
+						"sensor_vreg",
+						"sensor_vreg",
+						"sensor_clk",
+						"sensor_gpio";
+		qcom,cam-power-seq-val = "sensor_gpio_reset",
+						"cam_vana",
+						"cam_vdig",
+						"cam_vio",
+						"cam_vaf",
+						"sensor_cam_mclk",
+						"sensor_gpio_reset";
+		qcom,cam-power-seq-cfg-val = <0 1 1 1 1 24000000 1>;
+		qcom,cam-power-seq-delay = <1 1 1 1 0 1 5>;
 		status = "ok";
 		clocks = <&clock_gcc clk_mclk0_clk_src>,
 				<&clock_gcc clk_gcc_camss_mclk0_clk>;
@@ -98,11 +114,14 @@
 		qcom,mem0 = <0x18F6 0x0 2 0 1 0>;
 
 		cam_vio-supply = <&pm8953_l6>;
+		cam_vdig-supply = <&pm8953_l2>;
 		cam_vaf-supply = <&pm8953_l17>;
-		qcom,cam-vreg-name = "cam_vio", "cam_vaf";
-		qcom,cam-vreg-min-voltage = <1800000 2850000>;
-		qcom,cam-vreg-max-voltage = <1800000 2850000>;
-		qcom,cam-vreg-op-mode = <100000 100000>;
+		cam_vana-supply = <&pm8953_l22>;
+		qcom,cam-vreg-name =  "cam_vio", "cam_vdig", "cam_vaf",
+						"cam_vana";
+		qcom,cam-vreg-min-voltage = <0 1200000 2850000 2900000>;
+		qcom,cam-vreg-max-voltage = <0 1200000 2850000 2900000>;
+		qcom,cam-vreg-op-mode = <0 105000 100000 80000>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk0_default
 						&cam_sensor_rear_default>;
@@ -114,10 +133,26 @@
 		qcom,gpio-req-tbl-flags = <1 0>;
 		qcom,gpio-req-tbl-label = "CAMIF_MCLK0",
 			"CAM_RESET0";
-		qcom,cam-power-seq-type = "sensor_vreg", "sensor_vreg";
-		qcom,cam-power-seq-val = "cam_vio", "cam_vaf";
-		qcom,cam-power-seq-cfg-val = <1 1>;
-		qcom,cam-power-seq-delay = <5 5>;
+		qcom,cam-power-seq-type = "sensor_vreg",
+              "sensor_vreg",
+              "sensor_vreg",
+              "sensor_vreg",
+              "sensor_gpio",
+              "sensor_gpio",
+              "sensor_gpio",
+              "sensor_gpio",
+              "sensor_clk";
+		qcom,cam-power-seq-val = "cam_vio",
+            "cam_vana",
+            "cam_vdig",
+            "cam_vaf",
+            "sensor_gpio_reset",
+            "sensor_gpio_reset",
+            "sensor_gpio_standby",
+            "sensor_gpio_standby",
+            "sensor_cam_mclk";
+		qcom,cam-power-seq-cfg-val = <1 1 1 1 0 1 0 1 24000000>;
+		qcom,cam-power-seq-delay = <1 1 1 5 5 10 5 5 10>;
 		status = "ok";
 		clocks = <&clock_gcc clk_mclk0_clk_src>,
 				<&clock_gcc clk_gcc_camss_mclk0_clk>;
@@ -218,7 +253,6 @@
 		qcom,gpio-req-tbl-flags = <1 0>;
 		qcom,gpio-req-tbl-label = "CAMIF_MCLK1",
 					  "CAM_RESET1";
-
 		qcom,cam-power-seq-type =
 			"sensor_gpio",
 			"sensor_vreg",
@@ -235,7 +269,6 @@
 			"sensor_cam_mclk";
 		qcom,cam-power-seq-cfg-val = <0 1 1 1 1 24000000>;
 		qcom,cam-power-seq-delay = <5 1 1 5 10 10>;
-
 		status = "ok";
 		clocks = <&clock_gcc clk_mclk1_clk_src>,
 			<&clock_gcc clk_gcc_camss_mclk1_clk>;
@@ -278,7 +311,7 @@
 		qcom,cci-master = <0>;
 		status = "ok";
 		clocks = <&clock_gcc clk_mclk0_clk_src>,
-				<&clock_gcc clk_gcc_camss_mclk0_clk>;
+			<&clock_gcc clk_gcc_camss_mclk0_clk>;
 		clock-names = "cam_src_clk", "cam_clk";
 		qcom,clock-rates = <24000000 0>;
 	};
