--- a/arch/arm64/configs/franco_rosy_defconfig
+++ b/arch/arm64/configs/franco_rosy_defconfig
@@ -4530,3 +4530,6 @@ CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
 CONFIG_RWSEM_SPIN_ON_OWNER=y
 CONFIG_FREEZER=y
+
+# poor hack for sensor_ind wakelock
+CONFIG_PM_WAKELOCKS_SENSOR_IND_HACK=y
