--- a/arch/arm64/configs/franco_rosy_defconfig
+++ b/arch/arm64/configs/franco_rosy_defconfig
@@ -431,7 +431,7 @@ CONFIG_CPU_IDLE_GOV_MENU=y
 # CPU frequency scaling drivers
 #
 # CONFIG_CPUFREQ_DT is not set
-CONFIG_CPU_BOOST=y
+# CONFIG_CPU_BOOST is not set
 
 #
 # ARM CPU frequency scaling drivers
@@ -3774,7 +3774,7 @@ CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_CGROUPS=y
 CONFIG_CGROUP_FREEZER=y
-CONFIG_CPUSETS=y
+# CONFIG_CPUSETS is not set
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
 CONFIG_CGROUP_SCHED=y
